# FIMD

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cpu/: CMakeLists.txt  README.md  cpp_magic.h  cpu.c  cpu.h  example.c  fimd_cpu.c  fimd_cpu.h  generate.py  main.c  template.c  template_ARMv6.s
fpga/: .gitignore  README.md  compile.cfg  fimd.adf  fpga.aws  fpga.wsw
fpga/src/: fimd.vhd  ram_sim.vhd  raw_img_reader.vhd  testbench.vhd
gpu/: CMakeLists.txt  README.md  compute_lib.c  compute_lib.h  example.c  fimd_gpu.c  fimd_gpu.h  gl3_utils.c  gl3_utils.h  gpu.c  gpu.h  queue.c  queue.h  shader.comp
gpu/cmake/: FindEGL.cmake  FindGBM.cmake  FindOpenGLES.cmake
min/: README.md  fimd_cpu.hpp
